refactor(排班): 医生端排班查询重构为纯排班信息月度接口
移除今日排班接口中患者姓名等隐私字段，新增 /month 接口
返回 DoctorScheduleViewVO（班次/时段/诊室地点/备注），
供前端日/周/月三视图共用数据源